feat: 고객 알림 선호도 셀프서비스 추가
